--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,16 @@ spring.application.name=parcial
 
 
 spring.graphql.graphiql.enabled=true
-spring.datasource.url=jdbc:mysql://localhost:3306/parcial
+spring.datasource.url=jdbc:mysql://mysql:3306/parcial
 spring.datasource.username=root
 spring.datasource.password=12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
